# Workspace_UR5

./: .gitignore  .gitmodules  docker-compose.yml
docker/: Dockerfile  ros_entrypoint.sh
src/ur5_description/: CMakeLists.txt  package.xml
src/ur5_description/launch/: ur5_pose_goal.launch.py  ur5_rsp.launch.py  view_robot.launch.py
src/ur5_description/src/: ur5_move_group_client.py  ur5_square_points_pub.py
src/ur5_description/urdf/: ur5_with_hande.urdf.xacro
