<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="luis.cuevas@ug.uchile.cl">luis</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime + Build Dependencies -->
  <depend>xacro</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>moveit_ros_planning_interface</depend>

  <!-- ROS2 Control -->
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>

  <!-- Robot model dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>robotiq_description</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
